fix: z-index of header

--- a/src/main.scss
+++ b/src/main.scss
@@ -34,6 +34,7 @@ $content-margin: 3rem;
     width: 100%;
     background-color: white;
     box-shadow: 0 0 10px 10px rgba(black, 0.05);
+    z-index: 10;
     &__container {
         max-width: $content-width;
         margin: auto;
